--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-#env_default = enc
+#default_envs = enc
 
 [env:uno]
 platform = atmelavr
